--- a/navigation.html
+++ b/navigation.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2c2f33;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: transparent;">
     <a class="navbar-brand" href="#" style="font-size:25px">
       <img src="img/PFP173.png" width="35" height="35" class="d-inline-block align-top" alt="Old Pfp">
       AniFarm Support
@@ -12,11 +12,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">All Commands <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Support Server</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Support Server </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Invite Link  <span class="badge badge-light"> New</span></a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Invite Link  <span class="badge badge-light"></span></a>
           </li>
         </ul>
     </div>
